# uc-lab

./: .gitignore  Dockerfile  README.md
.github/workflows/: build_avr.yml  build_rpico.yml  build_rpico_projects.yml
avr/: Dockerfile
avr/src/: choreo.c  choreo.h  debounce.c  debounce.h  timemeas.c  timemeas.h  ws2812b.c  ws2812b.h  zzz.c  zzz.h
avr/src/blink/: Makefile  main.c
avr/src/choreo/: Makefile  main.c
avr/src/hot_wire/: Makefile  README.md  main.c
avr/src/moodlight/: Makefile  main.c
avr/src/pwm/: Makefile  main.c
avr/src/sleep_pci/: Makefile  main.c
avr/src/states/: Makefile  main.c
avr/src/timemeas/: Makefile  main.c
avr/src/togglebutton/: Makefile  main.c
avr/src/ws2812b/: Makefile  main.c
rpico/: CMakeLists.txt  build.bash
rpico/projects/Gamelight/: CMakeLists.txt  README.md  build.bash
rpico/projects/Gamelight/src/: gamelight_pc.py  main.c
rpico/projects/PCMoodlight/: CMakeLists.txt  README.md  build.bash
rpico/projects/PCMoodlight/src/: main.c
rpico/src/: debounce.c  debounce.h  main_blink.c  main_debounce.c  main_serial.c  main_ws2812.c  serial_pc.py
